:heavy_plus_sign: Added new song component to showcase its functionality.

--- a/config/config.cfg
+++ b/config/config.cfg
@@ -2,7 +2,7 @@ level = {
     name = "Forest Adventure",
     description = "A peaceful forest area with simple enemies to introduce basic game mechanics.",
     difficulty = "EASY",
-    background_music = "forest_theme.mp3",
+    backgroundMusic = "./assets/background.mp3",
     cell_size = 30,
     map_size = { x = 1000, y = 10 },
     view_port = { x = 1920, y = 1080 },
@@ -47,7 +47,7 @@ templates = (
                 name = "Gun",
                 args = {
                     bulletDamage = 10,
-                    fireRate = 1000,
+                    fireRate = 2000,
                     bulletVelocity = -5,
                     spriteId = "shot2"
                 }
@@ -77,6 +77,27 @@ templates = (
                 args = {
                     width = 300,
                     height = 300
+                }
+            },
+            {
+                name = "Sound",
+                args = {
+                    sounds = (
+                        {
+                            id = "ATTACK",
+                            path = "./assets/laser.wav",
+                            volume = 50,
+                            pitch = 1,
+                            loop = false
+                        },
+                        {
+                            id = "SPAWN",
+                            path = "./assets/spawn.wav",
+                            volume = 50,
+                            pitch = 1,
+                            loop = false
+                        }
+                    )
                 }
             }
         )
@@ -154,10 +175,10 @@ entities = (
             {
                 name = "Gun",
                 args = {
-                    bulletDamage = 50,
-                    fireRate = 25,
+                    bulletDamage = 5,
+                    fireRate = 10,
                     bulletVelocity = 20,
-                    spriteId = "shot1"
+                    spriteId = "shot1",
                 }
             },
             {
@@ -172,56 +193,80 @@ entities = (
                 args = {
                     id = 1
                 }
-            }
-        )
-    },
-    {
-        name = "Enemy1",
-        type = "Enemy",
-        spawnTime = 1000,
-        components = ()
-    },
-    {
-        name = "Enemy2",
-        type = "Enemy",
-        spawnTime = 4000,
-        components = (
-            {
-                name = "Position",
-                args = {
-                    x = 1700,
-                    y = 750,
-                    layer = 2
-                }
             },
             {
-                name = "SpriteID",
+                name = "Sound",
                 args = {
-                    id = "enemy2"
-                }
-            },
-            {
-                name = "Scale",
-                args = {
-                    width = 300,
-                    height = 300
-                }
-            },
-            {
-                name = "Gun",
-                args = {
-                    bulletDamage = 10,
-                    fireRate = 250,
-                    bulletVelocity = -8,
-                    spriteId = "shot3"
+                    sounds = (
+                        {
+                            id = "ATTACK",
+                            path = "./assets/laser2.wav",
+                            volume = 100,
+                            pitch = 1,
+                            loop = false
+                        },
+                        {
+                            id = "HIT",
+                            path = "./assets/hit.wav",
+                            volume = 100,
+                            pitch = 1,
+                            loop = false
+                        }
+                    )
                 }
             }
         )
     },
+    # {
+    #     name = "Enemy1",
+    #     type = "Enemy",
+    #     spawnTime = 1000,
+    #     components = ()
+    # },
+    # {
+    #     name = "Enemy2",
+    #     type = "Enemy",
+    #     spawnTime = 4000,
+    #     components = (
+    #         {
+    #             name = "Position",
+    #             args = {
+    #                 x = 1700,
+    #                 y = 750,
+    #                 layer = 2
+    #             }
+    #         },
+    #         {
+    #             name = "SpriteID",
+    #             args = {
+    #                 id = "enemy2"
+    #             }
+    #         },
+    #         {
+    #             name = "Scale",
+    #             args = {
+    #                 width = 300,
+    #                 height = 300
+    #             }
+    #         },
+    #         {
+    #             name = "Gun",
+    #             args = {
+    #                 bulletDamage = 10,
+    #                 fireRate = 250,
+    #                 bulletVelocity = -8,
+    #                 spriteId = "shot3",
+    #                 # soundPath = "./assets/laser.wav",
+    #                 # soundVolume = 100,
+    #                 # soundPitch = 1
+    #             }
+    #         }
+    #     )
+    # },
     {
         name = "Enemy9",
         type = "Enemy",
-        spawnTime = 8000,
+        spawnTime = 5000,
         components = (
             {
                 name = "Position",
@@ -248,7 +293,7 @@ entities = (
                 name = "Gun",
                 args = {
                     bulletDamage = 10,
-                    fireRate = 250,
+                    fireRate = 1000,
                     bulletVelocity = -8,
                     spriteId = "shot2"
                 }
@@ -258,7 +303,7 @@ entities = (
     {
         name = "Enemy3",
         type = "Enemy",
-        spawnTime = 2000,
+        spawnTime = 7000,
         components = (
             {
                 name = "Position",
@@ -267,131 +312,152 @@ entities = (
                     y = 250,
                     layer = 2
                 }
-            }
-        )
-    },
-    {
-        name = "Enemy4",
-        type = "Enemy",
-        spawnTime = 8000,
-        components = (
-            {
-                name = "Position",
-                args = {
-                    x = 800,
-                    y = 100,
-                    layer = 2
-                }
             },
             {
-                name = "Velocity",
+                name = "Sound",
                 args = {
-                    x = -2,
-                    y = 0,
-                    factor = 100
-                }
-            }
-        )
-    },
-    {
-        name = "Enemy5",
-        type = "Enemy",
-        spawnTime = 4000,
-        components = (
-            {
-                name = "Position",
-                args = {
-                    x = 200,
-                    y = 700,
-                    layer = 2
-                }
-            },
-            {
-                name = "Velocity",
-                args = {
-                    x = 1,
-                    y = 1,
-                    factor = 100
-                }
-            },
-            {
-                name = "Gun",
-                args = {
-                    bulletDamage = 10,
-                    fireRate = 250,
-                    bulletVelocity = 8,
-                    spriteId = "shot4"
+                    sounds = (
+                        {
+                            id = "ATTACK",
+                            path = "./assets/laser.wav",
+                            volume = 50,
+                            pitch = 2,
+                            loop = false
+                        },
+                        {
+                            id = "SPAWN",
+                            path = "./assets/spawn.wav",
+                            volume = 50,
+                            pitch = 2,
+                            loop = false
+                        }
+                    )
                 }
             }
         )
     },
-    {
-        name = "Static Enemy",
-        type = "Enemy",
-        spawnTime = 5000,
-        components = (
-            {
-                name = "Velocity",
-                args = {
-                    x = 0,
-                    y = 0,
-                    factor = 0
-                }
-            }
-        )
-    },
-    {
-        name = "EnemyBoss",
-        type = "Enemy",
-        spawnTime = 10000,
-        components = (
-            {
-                name = "Position",
-                args = {
-                    x = 0,
-                    y = 200,
-                    layer = 2
-                }
-            },
-            {
-                name = "Health",
-                args = {
-                    maxVal = 200,
-                    currentVal = 200
-                }
-            },
-            {
-                name = "Velocity",
-                args = {
-                    x = 1,
-                    y = 0,
-                    factor = 101
-                }
-            },
-            {
-                name = "Gun",
-                args = {
-                    bulletDamage = 10,
-                    fireRate = 250,
-                    bulletVelocity = 20,
-                    spriteId = "shot4"
-                }
-            },
-            {
-                name = "SpriteID",
-                args = {
-                    id = "enemy3"
-                }
-            },
-            {
-                name = "Scale",
-                args = {
-                    width = 300,
-                    height = 300
-                }
-            }
-        )
-    },
+    # {
+    #     name = "Enemy4",
+    #     type = "Enemy",
+    #     spawnTime = 8000,
+    #     components = (
+    #         {
+    #             name = "Position",
+    #             args = {
+    #                 x = 800,
+    #                 y = 100,
+    #                 layer = 2
+    #             }
+    #         },
+    #         {
+    #             name = "Velocity",
+    #             args = {
+    #                 x = -2,
+    #                 y = 0,
+    #                 factor = 100
+    #             }
+    #         }
+    #     )
+    # },
+    # {
+    #     name = "Enemy5",
+    #     type = "Enemy",
+    #     spawnTime = 4000,
+    #     components = (
+    #         {
+    #             name = "Position",
+    #             args = {
+    #                 x = 200,
+    #                 y = 700,
+    #                 layer = 2
+    #             }
+    #         },
+    #         {
+    #             name = "Velocity",
+    #             args = {
+    #                 x = 1,
+    #                 y = 1,
+    #                 factor = 100
+    #             }
+    #         },
+    #         {
+    #             name = "Gun",
+    #             args = {
+    #                 bulletDamage = 10,
+    #                 fireRate = 250,
+    #                 bulletVelocity = 8,
+    #                 spriteId = "shot4"
+    #             }
+    #         }
+    #     )
+    # },
+    # {
+    #     name = "Static Enemy",
+    #     type = "Enemy",
+    #     spawnTime = 5000,
+    #     components = (
+    #         {
+    #             name = "Velocity",
+    #             args = {
+    #                 x = 0,
+    #                 y = 0,
+    #                 factor = 0
+    #             }
+    #         }
+    #     )
+    # },
+    # {
+    #     name = "EnemyBoss",
+    #     type = "Enemy",
+    #     spawnTime = 10000,
+    #     components = (
+    #         {
+    #             name = "Position",
+    #             args = {
+    #                 x = 0,
+    #                 y = 200,
+    #                 layer = 2
+    #             }
+    #         },
+    #         {
+    #             name = "Health",
+    #             args = {
+    #                 maxVal = 200,
+    #                 currentVal = 200
+    #             }
+    #         },
+    #         {
+    #             name = "Velocity",
+    #             args = {
+    #                 x = 1,
+    #                 y = 0,
+    #                 factor = 101
+    #             }
+    #         },
+    #         {
+    #             name = "Gun",
+    #             args = {
+    #                 bulletDamage = 10,
+    #                 fireRate = 250,
+    #                 bulletVelocity = 20,
+    #                 spriteId = "shot4"
+    #             }
+    #         },
+    #         {
+    #             name = "SpriteID",
+    #             args = {
+    #                 id = "enemy3"
+    #             }
+    #         },
+    #         {
+    #             name = "Scale",
+    #             args = {
+    #                 width = 300,
+    #                 height = 300
+    #             }
+    #         }
+    #     )
+    # },
     {
         name = "Background",
         spawnTime = 0,
@@ -408,6 +474,20 @@ entities = (
                 name = "SpriteID",
                 args = {
                     id = "background"
+                }
+            },
+            {
+                name = "Sound",
+                args = {
+                    sounds = (
+                        {
+                            type = "AMBIENT",
+                            path = "./assets/background.mp3",
+                            volume = 100,
+                            pitch = 1,
+                            loop = true
+                        }
+                    )
                 }
             }
         )
