:wrench: Commented SFML system for server side

--- a/src/server/configServer.cfg
+++ b/src/server/configServer.cfg
@@ -32,14 +32,14 @@ systems = (
             path = "./config/config.cfg"
         }
     },
-    {
-        dir = "",
-        name = "Sfml",
-        args = {
-            width = 1920,
-            height = 1080,
-            title = "RType",
-            texturesPath = "./config/textures.cfg"
-        }
-    },
+    // {
+    //     dir = "",
+    //     name = "Sfml",
+    //     args = {
+    //         width = 1920,
+    //         height = 1080,
+    //         title = "RType",
+    //         texturesPath = "./config/textures.cfg"
+    //     }
+    // },
 );
