:heavy_plus_sign: :bento: Addeda new texture (spritesheet) explosion.

--- a/config/textures.cfg
+++ b/config/textures.cfg
@@ -182,5 +182,17 @@ textures = (
         name = "background",
         path = "./assets/background.png",
         type = "static"
+    },
+    {
+        name = "explosion",
+        type = "animated",
+        path = "./assets/explosion.png",
+        textureRect = {
+            x = 32,
+            y = 30,
+        },
+        updateRate = 100,
+        repeat = false,
+        resetBeforeEnd = false
     }
 )
