:heavy_plus_sign: Added destruction component config in the config file to showcase its use.

--- a/config/config.cfg
+++ b/config/config.cfg
@@ -99,6 +99,23 @@ templates = (
                         }
                     )
                 }
+            },
+            {
+                name = "Destruction",
+                args = {
+                    duration = 600,
+                    id = "explosion",
+                    sound = {
+                        path = "./assets/death.wav",
+                        volume = 100,
+                        pitch = 2,
+                        loop = false
+                    }
+                    scale = {
+                        width = 300,
+                        height = 300
+                    }
+                }
             }
         )
     }
@@ -213,6 +230,23 @@ entities = (
                             loop = false
                         }
                     )
+                }
+            },
+            {
+                name = "Destruction",
+                args = {
+                    duration = 600,
+                    id = "explosion",
+                    sound = {
+                        path = "./assets/death.wav",
+                        volume = 100,
+                        pitch = 1,
+                        loop = false
+                    }
+                    scale = {
+                        width = 300,
+                        height = 300
+                    }
                 }
             }
         )
