:heavy_plus_sign: Menu system

--- a/config/textures.cfg
+++ b/config/textures.cfg
@@ -65,6 +65,15 @@ textures = (
         )
     },
     {
+        name = "title_r",
+        type = "static",
+        path = "./assets/game_title.png",
+        # textureRect = {
+        #     x = 0,
+        #     y = 0,
+        # },
+    },
+    {
         name = "enemy",
         type = "animated",
         path = "./assets/spsheet1.png",
