--- a/src/client/configClient.cfg
+++ b/src/client/configClient.cfg
@@ -22,6 +22,11 @@ systems = (
     # },
     {
         dir = "",
+        name = "Menu",
+        args = {}
+    },
+    {
+        dir = "",
         name = "Sfml",
         args = {
             width = 1920,
