:recycle: Divide the title image into one image per character

--- a/config/textures.cfg
+++ b/config/textures.cfg
@@ -67,11 +67,7 @@ textures = (
     {
         name = "title_r",
         type = "static",
-        path = "./assets/game_title.png",
-        # textureRect = {
-        #     x = 0,
-        #     y = 0,
-        # },
+        path = "./assets/title_r.png",
     },
     {
         name = "enemy",
