--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -58,6 +58,22 @@ CPMAddPackage(
   OPTIONS "BOOST_ENABLE_CMAKE ON" "BOOST_INCLUDE_LIBRARIES asio"
 )
 
+include_directories(./build/_deps/raylib-src/src)
+CPMAddPackage(
+    NAME Raylib
+    GIT_REPOSITORY "https://github.com/raysan5/raylib.git"
+    GIT_TAG "5.0"
+    OPTIONS
+    "BUILD_EXAMPLES OFF"
+    "BUILD_GAMES OFF"
+    "BUILD_TEST OFF"
+    "BUILD_DOCS OFF"
+)
+
+# set(RAYLIB_LIBRARY_NAME "libraylib.a")
+# link_directories(./build/_deps/raylib-build/raylib/)
+include_directories(./build/_deps/raylib-build/raylib/include)
+
 if (WIN32)
     set(LIBCONFIG_LIB_NAME libconfig libconfig++)
 else()
