--- a/.github/workflows/rtype.yaml
+++ b/.github/workflows/rtype.yaml
@@ -49,6 +49,8 @@ jobs:
           libX11-devel 
           libXcursor-devel 
           libXrandr-devel
+          libXinerama-devel
+          libXi-devel
       - name: R-Type Compilation
         run: ./build_rtype.sh
       - name: R-Type Plugins Compilation
@@ -89,6 +91,8 @@ jobs:
           libvorbis-dev 
           libfreetype-dev 
           libfreetype6
+          libxinerama-dev
+          libxi-dev
       - name: Updated apt-file cache
         run: apt-file update
       - name: R-Type Compilation
