:heavy_plus_sign: title letter textures

--- a/config/textures.cfg
+++ b/config/textures.cfg
@@ -70,6 +70,31 @@ textures = (
         path = "./assets/title_r.png",
     },
     {
+        name = "title_o",
+        type = "static",
+        path = "./assets/title_o.png",
+    },
+    {
+        name = "title_t",
+        type = "static",
+        path = "./assets/title_t.png",
+    },
+    {
+        name = "title_y",
+        type = "static",
+        path = "./assets/title_y.png",
+    },
+    {
+        name = "title_p",
+        type = "static",
+        path = "./assets/title_p.png",
+    },
+    {
+        name = "title_e",
+        type = "static",
+        path = "./assets/title_e.png",
+    },
+    {
         name = "enemy",
         type = "animated",
         path = "./assets/spsheet1.png",
