--- a/src/client/configClient.cfg
+++ b/src/client/configClient.cfg
@@ -5,11 +5,11 @@ systems = (
     #     name = "Input",
     #     args = {}
     # },
-    # {
-    #     dir = "",
-    #     name = "Move",
-    #     args = {}
-    # },
+    {
+        dir = "",
+        name = "Move",
+        args = {}
+    },
     # {
     #     dir = "",
     #     name = "Collision",
