:wrench: Modified the commented smfl system for thoses who wznts to execute the server seperatly.

--- a/src/server/configServer.cfg
+++ b/src/server/configServer.cfg
@@ -33,7 +33,10 @@ systems = (
     #     args = {
     #         width = 1920,
     #         height = 1080,
-    #         title = "RType"
+    #         title = "RType",
+    #         texturesPath = "./config/textures.cfg",
+    #         shadersPath = "./config/shaders.cfg",
+    #         defaultShader = "tritanopia", # Possible values are: "default", "deuteranopia", "protanopia", "tritanopia"
     #     }
     # },
 );
