--- a/config/config.cfg
+++ b/config/config.cfg
@@ -37,7 +37,7 @@ templates = (
             {
                 name = "Ai",
                 args = {
-                    behavior = 0
+                    behavior = "NOTHING"
                 }
             },
             {
@@ -191,7 +191,7 @@ entities = (
             {
                 name = "Ai"
                 args = {
-                    behavior = 2
+                    behavior = "X_AXIS_LOOP"
                 }
             }
         )
@@ -288,7 +288,7 @@ entities = (
             {
                 name = "Ai",
                 args = {
-                    behavior = 1
+                    behavior = "Y_AXIS_LOOP"
                 }
             }
         )
@@ -317,7 +317,7 @@ entities = (
             {
                 name = "Ai",
                 args = {
-                    behavior = 3
+                    behavior = "Y_ZIG_ZAG_1"
                 }
             }
         )
@@ -356,7 +356,7 @@ entities = (
             {
                 name = "Ai",
                 args = {
-                    behavior = 4
+                    behavior = "Y_ZIG_ZAG_4"
                 }
             }
         )
@@ -377,7 +377,7 @@ entities = (
             {
                 name = "Ai",
                 args = {
-                    behavior = 6
+                    behavior = "X_AXIS_LOOP"
                 }
             },
             {
@@ -404,12 +404,6 @@ entities = (
                     y = 250,
                     layer = 2
                 }
-            },
-            {
-                name = "Ai",
-                args = {
-                    behavior = 5
-                }
             }
         )
     },
@@ -429,7 +423,7 @@ entities = (
             {
                 name = "Ai",
                 args = {
-                    behavior = 7
+                    behavior = "X_AXIS_LOOP_3"
                 }
             },
             {
@@ -458,12 +452,6 @@ entities = (
                 }
             },
             {
-                name = "Ai",
-                args = {
-                    behavior = 8
-                }
-            },
-            {
                 name = "Gun",
                 args = {
                     bulletDamage = 10,
@@ -489,12 +477,6 @@ entities = (
                 }
             },
             {
-                name = "Ai",
-                args = {
-                    behavior = 9
-                }
-            },
-            {
                 name = "Gun",
                 args = {
                     bulletDamage = 10,
@@ -517,12 +499,6 @@ entities = (
                     x = 1400,
                     y = 250,
                     layer = 2
-                }
-            },
-            {
-                name = "Ai",
-                args = {
-                    behavior = 10
                 }
             },
             {
