:recycle: Modified the way the config works by defining multiple directories to store each part. Later on, a nice improvement to the level folder could be added with a separation between entities, templates and level settings.

--- a/config/assets/shaders.cfg
+++ b/config/assets/shaders.cfg
@@ -1,14 +1,14 @@
 shaders = (
     {
         name = "deuteranopia",
-        path = "shaders/deuteranopia.frag"
+        path = "./shaders/deuteranopia.frag"
     },
     {
         name = "protanopia",
-        path = "shaders/protanopia.frag"
+        path = "./shaders/protanopia.frag"
     },
     {
         name = "tritanopia",
-        path = "shaders/tritanopia.frag"
+        path = "./shaders/tritanopia.frag"
     }
 )
