--- a/src/server/configServer.cfg
+++ b/src/server/configServer.cfg
@@ -1,39 +1,5 @@
 systemsPath = "./plugins/bin/systems/";
-systems = (
-    {
-        dir = "",
-        name = "Input",
-        args = {}
-    },
-    {
-        dir = "",
-        name = "Move",
-        args = {}
-    },
-    {
-        dir = "",
-        name = "Collision",
-        args = {}
-    },
-    {
-        dir = "",
-        name = "Attack",
-        args = {}
-    },
-    {
-        dir = "",
-        name = "Config",
-        args = {
-            path = "./config/config.cfg"
-        }
-    },
-    # {
-    #     dir = "",
-    #     name = "Sfml",
-    #     args = {
-    #         width = 1920,
-    #         height = 1080,
-    #         title = "RType"
-    #     }
-    # },
+systems = ( # Uncomment the one you need
+    @include "./config/server/RType.cfg"
+    # @include "./config/server/MarioQuartz.cfg"
 );
