--- a/src/client/configClient.cfg
+++ b/src/client/configClient.cfg
@@ -1,35 +1,5 @@
 systemsPath = "./plugins/bin/systems/";
-systems = (
-    # {
-    #     dir = "",
-    #     name = "Input",
-    #     args = {}
-    # },
-    # {
-    #     dir = "",
-    #     name = "Move",
-    #     args = {}
-    # },
-    # {
-    #     dir = "",
-    #     name = "Collision",
-    #     args = {}
-    # },
-    # {
-    #     dir = "",
-    #     name = "Attack",
-    #     args = {}
-    # },
-    {
-        dir = "",
-        name = "Sfml",
-        args = {
-            width = 1920,
-            height = 1080,
-            title = "RType",
-            texturesPath = "./config/textures.cfg",
-            shadersPath = "./config/shaders.cfg",
-            defaultShader = "default", # Possible values are: "default", "deuteranopia", "protanopia", "tritanopia"
-        }
-    },
+systems = ( # Uncomment the one you need
+    @include "./config/client/RType.cfg"
+    # @include "./config/client/MarioQuartz.cfg"
 );
