:heavy_plus_sign: Controllable manager

--- a/src/client/configClient.cfg
+++ b/src/client/configClient.cfg
@@ -20,11 +20,11 @@ systems = (
     #     name = "Attack",
     #     args = {}
     # },
-    {
-        dir = "",
-        name = "Menu",
-        args = {}
-    },
+    # {
+    #     dir = "",
+    #     name = "Menu",
+    #     args = {}
+    # },
     {
         dir = "",
         name = "Sfml",
