:heavy_plus_sign: TM sprite

--- a/config/textures.cfg
+++ b/config/textures.cfg
@@ -95,6 +95,11 @@ textures = (
         path = "./assets/title_e.png",
     },
     {
+        name = "title_tm",
+        type = "static",
+        path = "./assets/title_tm.png",
+    },
+    {
         name = "enemy",
         type = "animated",
         path = "./assets/spsheet1.png",
