:heavy_plus_sign: Creation of basic boss minions

--- a/config/config.cfg
+++ b/config/config.cfg
@@ -536,8 +536,8 @@ entities = (
             {
                 name = "Position",
                 args = {
-                    x = 0,
-                    y = 200,
+                    x = 1820,
+                    y = 500,
                     layer = 2
                 }
             },
@@ -577,6 +577,136 @@ entities = (
                 args = {
                     width = 300,
                     height = 300
+                }
+            },
+            {
+                name = "Ai",
+                args = {
+                    id = "Y_AXIS_LOOP"
+                }
+            }
+        )
+    },
+    {
+        name = "BossMinion1",
+        type = "Enemy",
+        spawnTime = 10000,
+        components = (
+            {
+                name = "Position",
+                args = {
+                    x = 1600,
+                    y = 200,
+                    layer = 2
+                }
+            },
+            {
+                name = "Gun",
+                args = {
+                    bulletDamage = 10,
+                    fireRate = 1000,
+                    bulletVelocityX = 6,
+                    bulletVelocityY = 0,
+                    spriteId = "shot2"
+                }
+            },
+            {
+                name = "Ai",
+                args = {
+                    id = "Y_ZIG_ZAG_1"
+                }
+            }
+        )
+    },
+        {
+        name = "BossMinion2",
+        type = "Enemy",
+        spawnTime = 10000,
+        components = (
+            {
+                name = "Position",
+                args = {
+                    x = 1600,
+                    y = 500,
+                    layer = 2
+                }
+            },
+            {
+                name = "Gun",
+                args = {
+                    bulletDamage = 10,
+                    fireRate = 1000,
+                    bulletVelocityX = 6,
+                    bulletVelocityY = 0,
+                    spriteId = "shot2"
+                }
+            },
+            {
+                name = "Ai",
+                args = {
+                    id = "Y_ZIG_ZAG_2"
+                }
+            }
+        )
+    },
+        {
+        name = "BossMinion3",
+        type = "Enemy",
+        spawnTime = 10000,
+        components = (
+            {
+                name = "Position",
+                args = {
+                    x = 1600,
+                    y = 750,
+                    layer = 2
+                }
+            },
+            {
+                name = "Gun",
+                args = {
+                    bulletDamage = 10,
+                    fireRate = 1000,
+                    bulletVelocityX = 6,
+                    bulletVelocityY = 0,
+                    spriteId = "shot2"
+                }
+            },
+            {
+                name = "Ai",
+                args = {
+                    id = "Y_ZIG_ZAG_3"
+                }
+            }
+        )
+    },
+        {
+        name = "BossMinion4",
+        type = "Enemy",
+        spawnTime = 10000,
+        components = (
+            {
+                name = "Position",
+                args = {
+                    x = 1600,
+                    y = 1000,
+                    layer = 2
+                }
+            },
+            {
+                name = "Gun",
+                args = {
+                    bulletDamage = 10,
+                    fireRate = 1000,
+                    bulletVelocityX = 6,
+                    bulletVelocityY = 0,
+                    spriteId = "shot2"
+                }
+            },
+            {
+                name = "Ai",
+                args = {
+                    id = "Y_ZIG_ZAG_4"
                 }
             }
         )
