:wrench: Fixed behavior args from id to behavior

--- a/config/config.cfg
+++ b/config/config.cfg
@@ -582,7 +582,7 @@ entities = (
             {
                 name = "Ai",
                 args = {
-                    id = "Y_AXIS_LOOP"
+                    behavior = "Y_AXIS_LOOP"
                 }
             }
         )
@@ -613,7 +613,7 @@ entities = (
             {
                 name = "Ai",
                 args = {
-                    id = "Y_ZIG_ZAG_1"
+                    behavior = "Y_ZIG_ZAG_1"
                 }
             }
         )
@@ -644,7 +644,7 @@ entities = (
             {
                 name = "Ai",
                 args = {
-                    id = "Y_ZIG_ZAG_2"
+                    behavior = "Y_ZIG_ZAG_2"
                 }
             }
         )
@@ -675,7 +675,7 @@ entities = (
             {
                 name = "Ai",
                 args = {
-                    id = "Y_ZIG_ZAG_3"
+                    behavior = "Y_ZIG_ZAG_3"
                 }
             }
         )
