:heavy_plus_sign: Launch game when play is selecteds

--- a/config/config.cfg
+++ b/config/config.cfg
@@ -106,6 +106,7 @@ entities = (
                     ACTION2 = "RIGHT_CLICK",
                     ACTION3 = "MIDDLE_CLICK",
                     ACTION5 = "SPACE"
+                    ACTION10 = "ENTER"
                 }
             },
             {
