--- a/config/config.cfg
+++ b/config/config.cfg
@@ -183,351 +183,21 @@ entities = (
             }
         )
     },
-    {
-        name = "Enemy1",
-        type = "Enemy",
-        spawnTime = 1000,
-        components = (
-            {
-                name = "Ai"
-                args = {
-                    behavior = "X_AXIS_LOOP"
-                }
-            }
-        )
-    },
-    {
-        name = "Enemy2",
-        type = "Enemy",
-        spawnTime = 4000,
-        components = (
-            {
-                name = "Position",
-                args = {
-                    x = 1700,
-                    y = 750,
-                    layer = 2
-                }
-            },
-            {
-                name = "SpriteID",
-                args = {
-                    id = "enemy2"
-                }
-            },
-            {
-                name = "Scale",
-                args = {
-                    width = 300,
-                    height = 300
-                }
-            },
-            {
-                name = "Gun",
-                args = {
-                    bulletDamage = 10,
-                    fireRate = 250,
-                    bulletVelocityX = -8,
-                    bulletVelocityY = 0,
-                    spriteId = "shot3"
-                }
-            }
-        )
-    },
-    {
-        name = "Enemy9",
-        type = "Enemy",
-        spawnTime = 8000,
-        components = (
-            {
-                name = "Position",
-                args = {
-                    x = 1700,
-                    y = 200,
-                    layer = 2
-                }
-            },
-            {
-                name = "SpriteID",
-                args = {
-                    id = "enemy2"
-                }
-            },
-            {
-                name = "Scale",
-                args = {
-                    width = 300,
-                    height = 300
-                }
-            },
-            {
-                name = "Gun",
-                args = {
-                    bulletDamage = 10,
-                    fireRate = 250,
-                    bulletVelocityX = -8,
-                    bulletVelocityY = 0,
-                    spriteId = "shot2"
-                }
-            }
-        )
-    },
-    {
-        name = "Enemy3",
-        type = "Enemy",
-        spawnTime = 2000,
-        components = (
-            {
-                name = "Position",
-                args = {
-                    x = 1800,
-                    y = 250,
-                    layer = 2
-                }
-            },
-            {
-                name = "Ai",
-                args = {
-                    behavior = "Y_AXIS_LOOP"
-                }
-            }
-        )
-    },
-    {
-        name = "Enemy4",
-        type = "Enemy",
-        spawnTime = 8000,
-        components = (
-            {
-                name = "Position",
-                args = {
-                    x = 800,
-                    y = 100,
-                    layer = 2
-                }
-            },
-            {
-                name = "Velocity",
-                args = {
-                    x = -2,
-                    y = 0,
-                    factor = 100
-                }
-            },
-            {
-                name = "Ai",
-                args = {
-                    behavior = "Y_ZIG_ZAG_1"
-                }
-            }
-        )
-    },
-    {
-        name = "Enemy5",
-        type = "Enemy",
-        spawnTime = 4000,
-        components = (
-            {
-                name = "Position",
-                args = {
-                    x = 200,
-                    y = 700,
-                    layer = 2
-                }
-            },
-            {
-                name = "Velocity",
-                args = {
-                    x = 1,
-                    y = 1,
-                    factor = 100
-                }
-            },
-            {
-                name = "Gun",
-                args = {
-                    bulletDamage = 10,
-                    fireRate = 250,
-                    bulletVelocityX = 8,
-                    bulletVelocityY = 0,
-                    spriteId = "shot4"
-                }
-            },
-            {
-                name = "Ai",
-                args = {
-                    behavior = "Y_ZIG_ZAG_4"
-                }
-            }
-        )
-    },
-    {
-        name = "Enemy6",
-        type = "Enemy",
-        spawnTime = 2000,
-        components = (
-            {
-                name = "Position",
-                args = {
-                    x = 800,
-                    y = 150,
-                    layer = 2
-                }
-            },
-            {
-                name = "Ai",
-                args = {
-                    behavior = "X_AXIS_LOOP"
-                }
-            },
-            {
-                name = "Gun",
-                args = {
-                    bulletDamage = 10,
-                    fireRate = 1000,
-                    bulletVelocityX = 0,
-                    bulletVelocityY = 5,
-                    spriteId = "shot2"
-                }
-            },
-        )
-    },
-    {
-        name = "Enemy7",
-        type = "Enemy",
-        spawnTime = 2000,
-        components = (
-            {
-                name = "Position",
-                args = {
-                    x = 1800,
-                    y = 250,
-                    layer = 2
-                }
-            }
-        )
-    },
-    {
-        name = "Enemy8",
-        type = "Enemy",
-        spawnTime = 2000,
-        components = (
-            {
-                name = "Position",
-                args = {
-                    x = 100,
-                    y = 250,
-                    layer = 2
-                }
-            },
-            {
-                name = "Ai",
-                args = {
-                    behavior = "X_AXIS_LOOP_3"
-                }
-            },
-            {
-                name = "Gun",
-                args = {
-                    bulletDamage = 10,
-                    fireRate = 1000,
-                    bulletVelocityX = 0,
-                    bulletVelocityY = 5,
-                    spriteId = "shot2"
-                }
-            },
-        )
-    },
-    {
-        name = "Enemy9",
-        type = "Enemy",
-        spawnTime = 2000,
-        components = (
-            {
-                name = "Position",
-                args = {
-                    x = 500,
-                    y = 250,
-                    layer = 2
-                }
-            },
-            {
-                name = "Gun",
-                args = {
-                    bulletDamage = 10,
-                    fireRate = 1000,
-                    bulletVelocityX = 0,
-                    bulletVelocityY = 8,
-                    spriteId = "shot2"
-                }
-            },
-        )
-    },
-    {
-        name = "Enemy10",
-        type = "Enemy",
-        spawnTime = 2000,
-        components = (
-            {
-                name = "Position",
-                args = {
-                    x = 900,
-                    y = 250,
-                    layer = 2
-                }
-            },
-            {
-                name = "Gun",
-                args = {
-                    bulletDamage = 10,
-                    fireRate = 1000,
-                    bulletVelocityX = 0,
-                    bulletVelocityY = 5,
-                    spriteId = "shot2"
-                }
-            },
-        )
-    },
-    {
-        name = "Enemy11",
-        type = "Enemy",
-        spawnTime = 2000,
-        components = (
-            {
-                name = "Position",
-                args = {
-                    x = 1400,
-                    y = 250,
-                    layer = 2
-                }
-            },
-            {
-                name = "Gun",
-                args = {
-                    bulletDamage = 10,
-                    fireRate = 1000,
-                    bulletVelocityX = 0,
-                    bulletVelocityY = 8,
-                    spriteId = "shot2"
-                }
-            },
-        )
-    },
-    {
-        name = "Static Enemy",
-        type = "Enemy",
-        spawnTime = 5000,
-        components = (
-            {
-                name = "Velocity",
-                args = {
-                    x = 0,
-                    y = 0,
-                    factor = 0
-                }
-            }
-        )
-    },
+    // {
+    //     name = "Static Enemy",
+    //     type = "Enemy",
+    //     spawnTime = 5000,
+    //     components = (
+    //         {
+    //             name = "Velocity",
+    //             args = {
+    //                 x = 0,
+    //                 y = 0,
+    //                 factor = 0
+    //             }
+    //         }
+    //     )
+    // },
     {
         name = "EnemyBoss",
         type = "Enemy",
@@ -551,9 +221,9 @@ entities = (
             {
                 name = "Velocity",
                 args = {
-                    x = 1,
+                    x = 0,
                     y = 0,
-                    factor = 101
+                    factor = 100
                 }
             },
             {
@@ -561,7 +231,7 @@ entities = (
                 args = {
                     bulletDamage = 10,
                     fireRate = 250,
-                    bulletVelocityX = 20,
+                    bulletVelocityX = -20,
                     bulletVelocityY = 0,
                     spriteId = "shot4"
                 }
@@ -605,7 +275,7 @@ entities = (
                 args = {
                     bulletDamage = 10,
                     fireRate = 1000,
-                    bulletVelocityX = 6,
+                    bulletVelocityX = -6,
                     bulletVelocityY = 0,
                     spriteId = "shot2"
                 }
@@ -636,7 +306,7 @@ entities = (
                 args = {
                     bulletDamage = 10,
                     fireRate = 1000,
-                    bulletVelocityX = 6,
+                    bulletVelocityX = -6,
                     bulletVelocityY = 0,
                     spriteId = "shot2"
                 }
@@ -667,7 +337,7 @@ entities = (
                 args = {
                     bulletDamage = 10,
                     fireRate = 1000,
-                    bulletVelocityX = 6,
+                    bulletVelocityX = -6,
                     bulletVelocityY = 0,
                     spriteId = "shot2"
                 }
@@ -698,7 +368,7 @@ entities = (
                 args = {
                     bulletDamage = 10,
                     fireRate = 1000,
-                    bulletVelocityX = 6,
+                    bulletVelocityX = -6,
                     bulletVelocityY = 0,
                     spriteId = "shot2"
                 }
@@ -706,7 +376,7 @@ entities = (
             {
                 name = "Ai",
                 args = {
-                    id = "Y_ZIG_ZAG_4"
+                    behavior = "Y_ZIG_ZAG_4"
                 }
             }
         )
