:heavy_plus_sign: Added 2 enemies on x axis loop during boss fight

--- a/config/config.cfg
+++ b/config/config.cfg
@@ -201,7 +201,7 @@ entities = (
     {
         name = "EnemyBoss",
         type = "Enemy",
-        spawnTime = 10000,
+        spawnTime = 30000,
         components = (
             {
                 name = "Position",
@@ -260,7 +260,7 @@ entities = (
     {
         name = "BossMinion1",
         type = "Enemy",
-        spawnTime = 10000,
+        spawnTime = 30000,
         components = (
             {
                 name = "Position",
@@ -288,10 +288,10 @@ entities = (
             }
         )
     },
-        {
+    {
         name = "BossMinion2",
         type = "Enemy",
-        spawnTime = 10000,
+        spawnTime = 30000,
         components = (
             {
                 name = "Position",
@@ -319,10 +319,10 @@ entities = (
             }
         )
     },
-        {
+    {
         name = "BossMinion3",
         type = "Enemy",
-        spawnTime = 10000,
+        spawnTime = 30000,
         components = (
             {
                 name = "Position",
@@ -350,10 +350,10 @@ entities = (
             }
         )
     },
-        {
+    {
         name = "BossMinion4",
         type = "Enemy",
-        spawnTime = 10000,
+        spawnTime = 30000,
         components = (
             {
                 name = "Position",
@@ -377,6 +377,80 @@ entities = (
                 name = "Ai",
                 args = {
                     behavior = "Y_ZIG_ZAG_4"
+                }
+            }
+        )
+    },
+    {
+        name = "BossMinion5",
+        type = "Enemy",
+        spawnTime = 30000,
+        components = (
+            {
+                name = "Position",
+                args = {
+                    x = 1600,
+                    y = 50,
+                    layer = 2
+                }
+            },
+            {
+                name = "Gun",
+                args = {
+                    bulletDamage = 10,
+                    fireRate = 1000,
+                    bulletVelocityX = 0,
+                    bulletVelocityY = 0,
+                    spriteId = "shot2"
+                }
+            },
+            {
+                name = "SpriteID",
+                args = {
+                    id = "enemy2"
+                }
+            },
+            {
+                name = "Ai",
+                args = {
+                    behavior = "X_AXIS_LOOP"
+                }
+            }
+        )
+    },
+    {
+        name = "BossMinion6",
+        type = "Enemy",
+        spawnTime = 30000,
+        components = (
+            {
+                name = "Position",
+                args = {
+                    x = 1600,
+                    y = 1030,
+                    layer = 2
+                }
+            },
+            {
+                name = "Gun",
+                args = {
+                    bulletDamage = 10,
+                    fireRate = 1000,
+                    bulletVelocityX = 0,
+                    bulletVelocityY = -8,
+                    spriteId = "shot2"
+                }
+            },
+            {
+                name = "SpriteID",
+                args = {
+                    id = "enemy2"
+                }
+            },
+            {
+                name = "Ai",
+                args = {
+                    behavior = "X_AXIS_LOOP"
                 }
             }
         )
