:heavy_plus_sign: Added a first wave of 4 enemies, center is safe

--- a/config/config.cfg
+++ b/config/config.cfg
@@ -183,21 +183,142 @@ entities = (
             }
         )
     },
-    // {
-    //     name = "Static Enemy",
-    //     type = "Enemy",
-    //     spawnTime = 5000,
-    //     components = (
-    //         {
-    //             name = "Velocity",
-    //             args = {
-    //                 x = 0,
-    //                 y = 0,
-    //                 factor = 0
-    //             }
-    //         }
-    //     )
-    // },
+    {
+        name = "Wave1_Enemy1",
+        type = "Enemy",
+        spawnTime = 300,
+        components = (
+            {
+                name = "Position",
+                args = {
+                    x = 1850,
+                    y = 350,
+                    layer = 2
+                }
+            },
+            {
+                name = "Gun",
+                args = {
+                    bulletDamage = 10,
+                    fireRate = 1000,
+                    bulletVelocityX = -3,
+                    bulletVelocityY = 0,
+                    spriteId = "shot2"
+                }
+            },
+            {
+                name = "SpriteID",
+                args = {
+                    id = "enemy"
+                }
+            }
+        )
+    },
+    {
+        name = "Wave1_Enemy2",
+        type = "Enemy",
+        spawnTime = 300,
+        components = (
+            {
+                name = "Position",
+                args = {
+                    x = 1850,
+                    y = 750,
+                    layer = 2
+                }
+            },
+            {
+                name = "Gun",
+                args = {
+                    bulletDamage = 10,
+                    fireRate = 1000,
+                    bulletVelocityX = -3,
+                    bulletVelocityY = 0,
+                    spriteId = "shot2"
+                }
+            },
+            {
+                name = "SpriteID",
+                args = {
+                    id = "enemy"
+                }
+            }
+        )
+    },
+    {
+        name = "Wave1_Enemy3",
+        type = "Enemy",
+        spawnTime = 300,
+        components = (
+            {
+                name = "Position",
+                args = {
+                    x = 1850,
+                    y = 350,
+                    layer = 2
+                }
+            },
+            {
+                name = "Gun",
+                args = {
+                    bulletDamage = 10,
+                    fireRate = 1000,
+                    bulletVelocityX = -3,
+                    bulletVelocityY = 0,
+                    spriteId = "shot2"
+                }
+            },
+            {
+                name = "SpriteID",
+                args = {
+                    id = "enemy"
+                }
+            },
+            {
+                name = "Ai",
+                args = {
+                    behavior = "Y_ZIG_ZAG_1"
+                }
+            }
+        )
+    },
+        {
+        name = "Wave1_Enemy4",
+        type = "Enemy",
+        spawnTime = 300,
+        components = (
+            {
+                name = "Position",
+                args = {
+                    x = 1850,
+                    y = 650,
+                    layer = 2
+                }
+            },
+            {
+                name = "Gun",
+                args = {
+                    bulletDamage = 10,
+                    fireRate = 1000,
+                    bulletVelocityX = -3,
+                    bulletVelocityY = 0,
+                    spriteId = "shot2"
+                }
+            },
+            {
+                name = "SpriteID",
+                args = {
+                    id = "enemy"
+                }
+            },
+            {
+                name = "Ai",
+                args = {
+                    behavior = "Y_ZIG_ZAG_4"
+                }
+            }
+        )
+    },
     {
         name = "EnemyBoss",
         type = "Enemy",
