--- a/config/config.cfg
+++ b/config/config.cfg
@@ -282,7 +282,7 @@ entities = (
             }
         )
     },
-        {
+    {
         name = "Wave1_Enemy4",
         type = "Enemy",
         spawnTime = 300,
@@ -315,6 +315,80 @@ entities = (
                 name = "Ai",
                 args = {
                     behavior = "Y_ZIG_ZAG_4"
+                }
+            }
+        )
+    },
+    {
+        name = "Wave1_Enemy5",
+        type = "Enemy",
+        spawnTime = 7500,
+        components = (
+            {
+                name = "Position",
+                args = {
+                    x = 1850,
+                    y = 450,
+                    layer = 2
+                }
+            },
+            {
+                name = "Gun",
+                args = {
+                    bulletDamage = 10,
+                    fireRate = 1000,
+                    bulletVelocityX = -5,
+                    bulletVelocityY = 0,
+                    spriteId = "shot2"
+                }
+            },
+            {
+                name = "SpriteID",
+                args = {
+                    id = "enemy"
+                }
+            },
+            {
+                name = "Ai",
+                args = {
+                    behavior = "Y_ZIG_ZAG_2"
+                }
+            }
+        )
+    },
+    {
+        name = "Wave1_Enemy6",
+        type = "Enemy",
+        spawnTime = 7500,
+        components = (
+            {
+                name = "Position",
+                args = {
+                    x = 1850,
+                    y = 650,
+                    layer = 2
+                }
+            },
+            {
+                name = "Gun",
+                args = {
+                    bulletDamage = 10,
+                    fireRate = 1000,
+                    bulletVelocityX = -5,
+                    bulletVelocityY = 0,
+                    spriteId = "shot2"
+                }
+            },
+            {
+                name = "SpriteID",
+                args = {
+                    id = "enemy"
+                }
+            },
+            {
+                name = "Ai",
+                args = {
+                    behavior = "Y_ZIG_ZAG_3"
                 }
             }
         )
