--- a/config/config.cfg
+++ b/config/config.cfg
@@ -394,6 +394,162 @@ entities = (
         )
     },
     {
+        name = "Wave2_Enemy1",
+        type = "Enemy",
+        spawnTime = 12000,
+        components = (
+            {
+                name = "Position",
+                args = {
+                    x = 1850,
+                    y = 50,
+                    layer = 2
+                }
+            },
+            {
+                name = "Gun",
+                args = {
+                    bulletDamage = 10,
+                    fireRate = 1000,
+                    bulletVelocityX = 0,
+                    bulletVelocityY = 5,
+                    spriteId = "shot2"
+                }
+            },
+            {
+                name = "SpriteID",
+                args = {
+                    id = "enemy"
+                }
+            },
+            {
+                name = "Ai",
+                args = {
+                    behavior = "X_ZIG_ZAG_4"
+                }
+            }
+        )
+    },
+    {
+        name = "Wave2_Enemy2",
+        type = "Enemy",
+        spawnTime = 12000,
+        components = (
+            {
+                name = "Position",
+                args = {
+                    x = 1850,
+                    y = 1000,
+                    layer = 2
+                }
+            },
+            {
+                name = "Velocity",
+                args = {
+                    x = 0,
+                    y = -1,
+                    factor = 90
+                }
+            },
+            {
+                name = "Gun",
+                args = {
+                    bulletDamage = 10,
+                    fireRate = 1000,
+                    bulletVelocityX = 0,
+                    bulletVelocityY = -5,
+                    spriteId = "shot2"
+                }
+            },
+            {
+                name = "SpriteID",
+                args = {
+                    id = "enemy"
+                }
+            },
+            {
+                name = "Ai",
+                args = {
+                    behavior = "X_ZIG_ZAG_4"
+                }
+            }
+        )
+    },
+    {
+        name = "Wave2_Enemy3",
+        type = "Enemy",
+        spawnTime = 12000,
+        components = (
+            {
+                name = "Position",
+                args = {
+                    x = 1850,
+                    y = 350,
+                    layer = 2
+                }
+            },
+            {
+                name = "Gun",
+                args = {
+                    bulletDamage = 10,
+                    fireRate = 1000,
+                    bulletVelocityX = 5,
+                    bulletVelocityY = 3,
+                    spriteId = "shot1"
+                }
+            },
+            {
+                name = "SpriteID",
+                args = {
+                    id = "enemy"
+                }
+            },
+            {
+                name = "Ai",
+                args = {
+                    behavior = "Y_ZIG_ZAG_1"
+                }
+            }
+        )
+    },
+    {
+        name = "Wave2_Enemy4",
+        type = "Enemy",
+        spawnTime = 12000,
+        components = (
+            {
+                name = "Position",
+                args = {
+                    x = 1850,
+                    y = 900,
+                    layer = 2
+                }
+            },
+            {
+                name = "Gun",
+                args = {
+                    bulletDamage = 10,
+                    fireRate = 1000,
+                    bulletVelocityX = 5,
+                    bulletVelocityY = -3,
+                    spriteId = "shot1"
+                }
+            },
+            {
+                name = "SpriteID",
+                args = {
+                    id = "enemy"
+                }
+            },
+            {
+                name = "Ai",
+                args = {
+                    behavior = "Y_ZIG_ZAG_4"
+                }
+            }
+        )
+    },
+    {
         name = "EnemyBoss",
         type = "Enemy",
         spawnTime = 30000,
