:wrench: Fixed issues with the second game!

--- a/config/levels/config.cfg
+++ b/config/levels/config.cfg
@@ -17,7 +17,7 @@ templates = (
                 args = {
                     x = 1000,
                     y = 500,
-                    z = 2
+                    layer = 2
                 }
             },
             {
@@ -31,7 +31,6 @@ templates = (
                 args = {
                     x = -1,
                     y = 0,
-                    z = 0,
                     factor = 100
                 }
             },
@@ -111,12 +110,12 @@ templates = (
             {
                 name = "Destruction",
                 args = {
-                    duration = 600,
+                    duration = 900,
                     id = "explosion",
                     sound = {
                         path = "./assets/death.wav",
                         volume = 100,
-                        pitch = 2,
+                        pitch = 1,
                         loop = false
                     }
                     scale = {
@@ -138,7 +137,7 @@ entities = (
                 args = {
                     x = 250,
                     y = 500,
-                    z = 2
+                    layer = 2
                 }
             },
             {
@@ -173,7 +172,6 @@ entities = (
                 args = {
                     x = 0,
                     y = 0,
-                    z = 0,
                     factor = 90
                 }
             },
@@ -267,7 +265,7 @@ entities = (
                 args = {
                     x = 1700,
                     y = 750,
-                    z = 2
+                    layer = 2
                 }
             },
             {
@@ -366,7 +364,7 @@ entities = (
                 args = {
                     x = 1700,
                     y = 200,
-                    z = 2
+                    layer = 2
                 }
             },
             {
@@ -404,7 +402,7 @@ entities = (
                 args = {
                     x = 1800,
                     y = 250,
-                    z = 2
+                    layer = 2
                 }
             },
             {
@@ -425,7 +423,7 @@ entities = (
                 args = {
                     x = 800,
                     y = 100,
-                    z = 2
+                    layer = 2
                 }
             },
             {
@@ -582,7 +580,7 @@ entities = (
                 args = {
                     x = 960,
                     y = 540,
-                    z = 0
+                    layer = 0
                 }
             },
             {
