--- a/config/levels/config2.cfg
+++ b/config/levels/config2.cfg
@@ -15,7 +15,7 @@ entities = (
         spawnTime = 0,
         components = (
             {
-                name = "Position",
+                name = "Position3d",
                 args = {
                     x = 0,
                     y = 0,
@@ -42,7 +42,7 @@ entities = (
         spawnTime = 0,
         components = (
             {
-                name = "Position",
+                name = "Position3d",
                 args = {
                     x = 0,
                     y = 0,
@@ -69,7 +69,7 @@ entities = (
         spawnTime = 0,
         components = (
             {
-                name = "Position",
+                name = "Position3d",
                 args = {
                     x = 0,
                     y = 0,
@@ -83,7 +83,7 @@ entities = (
                 }
             },
             {
-                name = "Velocity",
+                name = "Velocity3d",
                 args = {
                     x = 0,
                     y = 0,
