--- a/plugins/systems/raylib/CMakeLists.txt
+++ b/plugins/systems/raylib/CMakeLists.txt
@@ -1,5 +1,5 @@
 # Add an executable for the server project
-add_library(Raylib SHARED
+add_library(RaylibSystem SHARED
     Raylib.cpp
     DisplayManager.cpp
     ModelComponent.cpp
@@ -9,7 +9,19 @@ add_library(Raylib SHARED
     ../../../src/utils/Actions.cpp
 )
 
-target_link_libraries(Raylib
+include_directories(./build/_deps/raylib-src/src)
+CPMAddPackage(
+    NAME Raylib
+    GIT_REPOSITORY "https://github.com/raysan5/raylib.git"
+    GIT_TAG "5.0"
+    OPTIONS
+    "BUILD_EXAMPLES OFF"
+    "BUILD_GAMES OFF"
+    "BUILD_TEST OFF"
+    "BUILD_DOCS OFF"
+)
+
+target_link_libraries(RaylibSystem
     raylib
     ${LIBCONFIG_LIB_NAME}
 )
