--- a/config/config.cfg
+++ b/config/config.cfg
@@ -150,19 +150,8 @@ entities = (
                     ACTION1 = "SPACE",
                     ACTION2 = "RIGHT_CLICK",
                     ACTION3 = "MIDDLE_CLICK",
-                    ACTION5 = "SPACE",
-                    ACTION10 = "ENTER",
-                    NUM_0 = "NUM_0",
-                    NUM_1 = "NUM_1",
-                    NUM_2 = "NUM_2",
-                    NUM_3 = "NUM_3",
-                    NUM_4 = "NUM_4",
-                    NUM_5 = "NUM_5",
-                    NUM_6 = "NUM_6",
-                    NUM_7 = "NUM_7",
-                    NUM_8 = "NUM_8",
-                    NUM_9 = "NUM_9",
-                    DOT = "DOT",
+                    ACTION5 = "SPACE"
+                    ACTION10 = "ENTER"
                 }
             },
             {
